<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/customer_counter_header">

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="numberDecimal"
            app:key="prefCustomerKey"
            app:title="@string/amount_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="10"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            app:key="prefMaxKey"
            app:title="@string/max_amount_title"
            app:useSimpleSummaryProvider="true" />

        <!-- todo
         <SwitchPreferenceCompat
             app:key="prefSoundKey"
             app:title="@string/sound_title" />
          -->

        <SwitchPreferenceCompat
            app:key="prefVibrateKey"
            app:title="@string/vibrate_title" />

        <SwitchPreferenceCompat
            app:key="prefVolumeControlOnKey"
            app:summaryOff="@string/sound_buttons_summary_off"
            app:summaryOn="@string/sound_buttons_summary_on"
            app:title="@string/sound_buttons_title" />

    </PreferenceCategory>

</PreferenceScreen>