<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/backgroundPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/maximumLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/maxTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/maximum"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/maxValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/freeSpotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/freeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/free_spots"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/freeValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/freeSpotsLayout">

        <LinearLayout
            android:id="@+id/countLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/amount_of_customer" />

            <TextView
                android:id="@+id/amountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:lines="1"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stopLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="90sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/limit_reached"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/limit_reached"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/addLayout"
        style="@style/BigButtonLayout"
        android:background="@drawable/button_border_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/subLayout">

        <ImageButton
            style="@style/BigButton"
            android:contentDescription="@string/addCustomer"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subLayout"
        style="@style/BigButtonLayout"
        android:background="@drawable/button_border_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addLayout"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            style="@style/BigButton"
            android:contentDescription="@string/subCustomer"
            app:srcCompat="@drawable/ic_baseline_remove_24" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/settingsBtn"
        style="@style/SmallButton"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="@id/backgroundPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24" />


</androidx.constraintlayout.widget.ConstraintLayout>